noinst_LTLIBRARIES = libeva-dns.la
pkginclude_dnsdir = $(includedir)/eva-1.0/eva/dns

INCLUDES = @GLIB_CFLAGS@ @EVA_DEBUG_CFLAGS@

libeva_dns_la_SOURCES = \
evadns.c \
evadnsclient.c \
evadnslocalresolver.c \
evadnsresolver.c \
evadnsrrcache.c \
evadnsserver.c

pkginclude_dns_HEADERS = \
evadns.h \
evadnsclient.h \
evadnslocalresolver.h \
evadnsresolver.h \
evadnsrrcache.h \
evadnsserver.h
