noinst_LTLIBRARIES = libeva-store.la
pkginclude_storedir = $(includedir)/eva-1.0/eva/store

INCLUDES = @GLIB_CFLAGS@ @EVA_DEBUG_CFLAGS@

libeva_store_la_SOURCES = \
evaasynccache.c \
evafilestreammap.c \
evagtypeloader.c \
evastorageformat.c \
evastore.c \
evastreammap.c \
evavaluerequest.c \
evaxmlformat.c \
evaxmlvaluereader.c \
evaxmlvaluewriter.c

pkginclude_store_HEADERS = \
evaasynccache.h \
evafilestreammap.h \
evagtypeloader.h \
evastorageformat.h \
evastore.h \
evastreammap.h \
evavaluerequest.h \
evaxmlformat.h \
evaxmlvaluereader.h \
evaxmlvaluewriter.h
