noinst_LTLIBRARIES = libeva-url.la
pkginclude_urldir = $(includedir)/eva-1.0/eva/url
INCLUDES = @GLIB_CFLAGS@ @EVA_DEBUG_CFLAGS@
libeva_url_la_SOURCES = evaurl.c evaurl-download.c evaurltransfer.c evaurltransferhttp.c evaurltransferfile.c evaurltransfer-builtins.c
pkginclude_url_HEADERS = evaurl.h evaurltransfer.h evaurltransferhttp.h evaurltransferfile.h
